fuel-client/src/client/schema/snapshots/fuel_gql_client__client__schema__block__tests__block_by_height_query_gql_output.snap
---
source: fuel-client/src/client/schema/block.rs
expression: operation.query
---
query($height: U64) {
  block(height: $height) {
    id
    header {
      id
      daHeight
      transactionsCount
      outputMessagesCount
      transactionsRoot
      outputMessagesRoot
      height
      prevRoot
      time
      applicationHash
    }
    consensus {
      __typename
      ... on Genesis {
        chainConfigHash
        coinsRoot
        contractsRoot
        messagesRoot
      }
      ... on PoAConsensus {
        signature
      }
    }
    transactions {
      id
    }
  }
}


