fuel-client/src/client/schema/snapshots/fuel_gql_client__client__schema__block__tests__block_mutation_query_gql_output.snap
---
source: fuel-client/src/client/schema/block.rs
expression: operation.query
---
mutation Mutation($_0: U64!) {
  produceBlocks(blocksToProduce: $_0)
}

