fuel-client/src/client/schema/snapshots/fuel_gql_client__client__schema__block__tests__blocks_connection_query_gql_output.snap
---
source: fuel-client/src/client/schema/block.rs
assertion_line: 96
expression: operation.query

---
query Query($_0: String, $_1: String, $_2: Int, $_3: Int) {
  blocks(after: $_0, before: $_1, first: $_2, last: $_3) {
    edges {
      cursor
      node {
        height
        id
        time
        producer {
          address
        }
        transactions {
          rawPayload
          receipts {
            rawPayload
          }
          status {
            __typename
            ... on SubmittedStatus {
              time
            }
            ... on SuccessStatus {
              blockId
              time
              programState {
                returnType
                data
              }
            }
            ... on FailureStatus {
              blockId
              time
              reason
              programState {
                returnType
                data
              }
            }
          }
        }
      }
    }
    pageInfo {
      endCursor
      hasNextPage
      hasPreviousPage
      startCursor
    }
  }
}

